--- a/Common/WorkItems/Test2/WorkItemTest2.dproj
+++ b/Common/WorkItems/Test2/WorkItemTest2.dproj
@@ -125,6 +125,7 @@
         <DCCReference Include="..\..\DLList\DLList.pas"/>
         <DCCReference Include="..\..\Indexed Store\IndexedStore.pas"/>
         <DCCReference Include="..\..\Balanced Tree\BinaryTree.pas"/>
+        <DCCReference Include="..\..\Tracking\Trackables.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
