KnowComment: Optional QDepth limit for workitems queues. KnowComment: DB stats. Knowcomment: Twitter code now runnable (but ugly). Knowcomment: HTMLEscapeHelper functions now cleaned up.

--- a/KnowComment/KnowComment/KnowComment.dproj
+++ b/KnowComment/KnowComment/KnowComment.dproj
@@ -109,6 +109,7 @@
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
+        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <Debugger_DebugSourcePath>C:\MCH stuff\github\Indy\C18\;$(Debugger_DebugSourcePath)</Debugger_DebugSourcePath>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
