--- a/CheckIn Testapps/HTTP Server GUI/ServerApp.dproj
+++ b/CheckIn Testapps/HTTP Server GUI/ServerApp.dproj
@@ -122,7 +122,6 @@
         <DCCReference Include="..\..\Common\MemDB\MemDBMisc.pas"/>
         <DCCReference Include="..\..\Common\MemDB\MemDbStreamable.pas"/>
         <DCCReference Include="..\..\Common\MemDB\MemDBUtils.pas"/>
-        <DCCReference Include="..\..\Common\CachedStream\BufferedFileStream.pas"/>
         <DCCReference Include="..\..\Common\StreamingSystem\SSAbstracts.pas"/>
         <DCCReference Include="..\..\Common\StreamingSystem\SSIntermediates.pas"/>
         <DCCReference Include="..\..\Common\StreamingSystem\SSStreamables.pas"/>
@@ -134,6 +133,8 @@
         <DCCReference Include="..\..\CoCoDM\Distributable\Frames\CocoBase.pas"/>
         <DCCReference Include="..\..\Common\QueuedMailer\QueuedMailer.pas"/>
         <DCCReference Include="..\..\CheckIn\CheckInAppConfig.pas"/>
+        <DCCReference Include="..\..\CheckIn\CheckInAudit.pas"/>
+        <DCCReference Include="..\..\Common\CachedStream\BufferedFileStream.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
