CheckIn: Service app, periodic handling, and misc bugfixes.

--- a/CheckIn service/CheckInService.dproj
+++ b/CheckIn service/CheckInService.dproj
@@ -1,21 +1,16 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <ProjectGuid>{BE9129B2-A0BF-4986-8D81-54E5BD3DA4F2}</ProjectGuid>
+        <ProjectGuid>{F3EDDFAA-827E-4C77-B57D-0B8AD1E5A898}</ProjectGuid>
         <ProjectVersion>14.6</ProjectVersion>
-        <FrameworkType>FMX</FrameworkType>
-        <MainSource>ServerApp.dpr</MainSource>
+        <FrameworkType>VCL</FrameworkType>
+        <MainSource>CheckInService.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
-        <Base>true</Base>
-    </PropertyGroup>
-    <PropertyGroup Condition="('$(Platform)'=='OSX32' and '$(Base)'=='true') or '$(Base_OSX32)'!=''">
-        <Base_OSX32>true</Base_OSX32>
-        <CfgParent>Base</CfgParent>
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="('$(Platform)'=='Win32' and '$(Base)'=='true') or '$(Base_Win32)'!=''">
@@ -39,19 +34,36 @@
         <Cfg_1>true</Cfg_1>
         <Base>true</Base>
     </PropertyGroup>
+    <PropertyGroup Condition="('$(Platform)'=='Win64' and '$(Cfg_1)'=='true') or '$(Cfg_1_Win64)'!=''">
+        <Cfg_1_Win64>true</Cfg_1_Win64>
+        <CfgParent>Cfg_1</CfgParent>
+        <Cfg_1>true</Cfg_1>
+        <Base>true</Base>
+    </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Release' or '$(Cfg_2)'!=''">
         <Cfg_2>true</Cfg_2>
         <CfgParent>Base</CfgParent>
         <Base>true</Base>
     </PropertyGroup>
+    <PropertyGroup Condition="('$(Platform)'=='Win32' and '$(Cfg_2)'=='true') or '$(Cfg_2_Win32)'!=''">
+        <Cfg_2_Win32>true</Cfg_2_Win32>
+        <CfgParent>Cfg_2</CfgParent>
+        <Cfg_2>true</Cfg_2>
+        <Base>true</Base>
+    </PropertyGroup>
+    <PropertyGroup Condition="('$(Platform)'=='Win64' and '$(Cfg_2)'=='true') or '$(Cfg_2_Win64)'!=''">
+        <Cfg_2_Win64>true</Cfg_2_Win64>
+        <CfgParent>Cfg_2</CfgParent>
+        <Cfg_2>true</Cfg_2>
+        <Base>true</Base>
+    </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
-        <VerInfo_Locale>2057</VerInfo_Locale>
-        <Manifest_File>None</Manifest_File>
-        <DCC_Define>MANUAL_UNIT_INITIALIZATION;$(DCC_Define)</DCC_Define>
-        <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
-        <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;$(DCC_Namespace)</DCC_Namespace>
         <Icns_MainIcns>$(BDS)\bin\delphi_PROJECTICNS.icns</Icns_MainIcns>
+        <VerInfo_Locale>2057</VerInfo_Locale>
+        <DCC_Define>SERVICE_APP;MANUAL_UNIT_INITIALIZATION;$(DCC_Define)</DCC_Define>
+        <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Vcl;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;$(DCC_Namespace)</DCC_Namespace>
+        <Manifest_File>None</Manifest_File>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
         <DCC_ExeOutput>.\$(Platform)\$(Config)</DCC_ExeOutput>
         <DCC_E>false</DCC_E>
@@ -60,29 +72,23 @@
         <DCC_F>false</DCC_F>
         <DCC_K>false</DCC_K>
     </PropertyGroup>
-    <PropertyGroup Condition="'$(Base_OSX32)'!=''">
-        <DCC_UsePackage>bindcompfmx;DBXSqliteDriver;fmx;rtl;dbrtl;DbxClientDriver;IndySystem;bindcomp;DBXInterBaseDriver;DataSnapCommon;xmlrtl;ibxpress;DbxCommonDriver;IndyProtocols;dbxcds;DBXMySQLDriver;bindengine;soaprtl;bindcompdbx;FMXTee;CustomIPTransport;dsnap;IndyIPServer;fmxase;IndyCore;IndyIPCommon;CloudService;FmxTeeUI;inet;fmxobj;inetdbxpress;fmxdae;dbexpress;IndyIPClient;$(DCC_UsePackage)</DCC_UsePackage>
-    </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
-        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <DCC_UsePackage>bindcompfmx;DBXSqliteDriver;frxDB18;vcldbx;fmx;rtl;dbrtl;DbxClientDriver;IndySystem;TeeDB;bindcomp;frx18;inetdbbde;vclib;DBXInterBaseDriver;Tee;DataSnapCommon;xmlrtl;svnui;ibxpress;DbxCommonDriver;vclimg;IndyProtocols;dbxcds;DBXMySQLDriver;frxe18;MetropolisUILiveTile;vclactnband;bindengine;vcldb;soaprtl;bindcompdbx;vcldsnap;bindcompvcl;FMXTee;TeeUI;vclie;vcltouch;CustomIPTransport;vclribbon;VclSmp;dsnap;IndyIPServer;Intraweb;fmxase;vcl;IndyCore;IndyIPCommon;CloudService;CodeSiteExpressPkg;dsnapcon;FmxTeeUI;inet;fmxobj;vclx;inetdbxpress;webdsnap;svn;fmxdae;bdertl;dbexpress;adortl;IndyIPClient;$(DCC_UsePackage)</DCC_UsePackage>
-        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win64)'!=''">
-        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;$(DCC_Namespace)</DCC_Namespace>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
-        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;$(DCC_Namespace)</DCC_Namespace>
         <DCC_UsePackage>bindcompfmx;DBXSqliteDriver;fmx;rtl;dbrtl;DbxClientDriver;IndySystem;TeeDB;bindcomp;vclib;DBXInterBaseDriver;Tee;DataSnapCommon;xmlrtl;ibxpress;DbxCommonDriver;vclimg;IndyProtocols;dbxcds;DBXMySQLDriver;MetropolisUILiveTile;vclactnband;bindengine;vcldb;soaprtl;bindcompdbx;vcldsnap;bindcompvcl;FMXTee;TeeUI;vclie;vcltouch;CustomIPTransport;vclribbon;VclSmp;dsnap;IndyIPServer;Intraweb;fmxase;vcl;IndyCore;IndyIPCommon;CloudService;dsnapcon;FmxTeeUI;inet;fmxobj;vclx;inetdbxpress;webdsnap;fmxdae;dbexpress;adortl;IndyIPClient;$(DCC_UsePackage)</DCC_UsePackage>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
-        <VerInfo_Locale>2057</VerInfo_Locale>
-        <Manifest_File>None</Manifest_File>
-        <DCC_Define>DEBUG;USE_TRACKABLES;DEBUG_SESSION_LIFETIME;$(DCC_Define)</DCC_Define>
+        <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
         <DCC_DebugDCUs>true</DCC_DebugDCUs>
         <DCC_Optimize>false</DCC_Optimize>
         <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
@@ -90,10 +96,15 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <DCC_Define>DEBUG_HTTP_REQUESTS;$(DCC_Define)</DCC_Define>
-        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
+        <VerInfo_Locale>1033</VerInfo_Locale>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -101,52 +112,59 @@
         <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
         <DCC_DebugInformation>false</DCC_DebugInformation>
     </PropertyGroup>
+    <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
+        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Cfg_2_Win64)'!=''">
+        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
+    </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="ServerForm.pas">
-            <Form>ServerFrm</Form>
-            <FormType>fmx</FormType>
+        <DCCReference Include="SrvController.pas">
+            <Form>ChkInService</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TService</DesignClass>
         </DCCReference>
-        <DCCReference Include="..\..\Common\HTTPServerDispatcher\HTTPServerDispatcher.pas"/>
-        <DCCReference Include="..\..\Common\Logging\GlobalLog.pas"/>
-        <DCCReference Include="..\..\Common\WorkItems\CommonPool.pas"/>
-        <DCCReference Include="..\..\Common\Tracking\Trackables.pas"/>
-        <DCCReference Include="..\..\Common\Indexed Store\IndexedStore.pas"/>
-        <DCCReference Include="..\..\Common\Balanced Tree\BinaryTree.pas"/>
-        <DCCReference Include="..\..\Common\WorkItems\WorkItems.pas"/>
-        <DCCReference Include="..\..\Common\DLList\DLList.pas"/>
-        <DCCReference Include="..\..\Common\WorkItems\DLThreadQueue.pas"/>
-        <DCCReference Include="..\..\Common\HTTPServerDispatcher\HTTPServerPageProducer.pas"/>
-        <DCCReference Include="..\..\Common\HTMLParser\HTMLEscapeHelper.pas"/>
-        <DCCReference Include="..\..\CheckIn\CheckInPageProducer.pas"/>
-        <DCCReference Include="..\..\CheckIn\CheckInMailer.pas"/>
-        <DCCReference Include="..\..\CheckIn\CheckInAppLogic.pas"/>
-        <DCCReference Include="..\..\Common\MemDB\MemDB.pas"/>
-        <DCCReference Include="..\..\Common\MemDB\MemDBApi.pas"/>
-        <DCCReference Include="..\..\Common\MemDB\MemDBBuffered.pas"/>
-        <DCCReference Include="..\..\Common\MemDB\MemDBIndexing.pas"/>
-        <DCCReference Include="..\..\Common\MemDB\MemDBJournal.pas"/>
-        <DCCReference Include="..\..\Common\MemDB\MemDBMisc.pas"/>
-        <DCCReference Include="..\..\Common\MemDB\MemDbStreamable.pas"/>
-        <DCCReference Include="..\..\Common\MemDB\MemDBUtils.pas"/>
-        <DCCReference Include="..\..\Common\StreamingSystem\SSAbstracts.pas"/>
-        <DCCReference Include="..\..\Common\StreamingSystem\SSIntermediates.pas"/>
-        <DCCReference Include="..\..\Common\StreamingSystem\SSStreamables.pas"/>
-        <DCCReference Include="..\..\Common\StreamingSystem\StreamingSystem.pas"/>
-        <DCCReference Include="..\..\Common\StreamingSystem\StreamSysBinary.pas"/>
-        <DCCReference Include="..\..\Common\StreamingSystem\StreamSysXML.pas"/>
-        <DCCReference Include="..\..\Common\StreamingSystem\TrivXML.PAS"/>
-        <DCCReference Include="..\..\Common\StreamingSystem\TrivXMLDefs.pas"/>
-        <DCCReference Include="..\..\CoCoDM\Distributable\Frames\CocoBase.pas"/>
-        <DCCReference Include="..\..\Common\QueuedMailer\QueuedMailer.pas"/>
-        <DCCReference Include="..\..\CheckIn\CheckInAppConfig.pas"/>
-        <DCCReference Include="..\..\CheckIn\CheckInAudit.pas"/>
-        <DCCReference Include="..\..\Common\CachedStream\BufferedFileStream.pas"/>
-        <DCCReference Include="..\..\Common\HTTPServerDispatcher\HTTPForwarder.pas"/>
-        <DCCReference Include="..\..\Common\HTTPServerDispatcher\HTTPMisc.pas"/>
-        <DCCReference Include="..\..\CheckIn\CheckInServiceCoOrdinator.pas"/>
+        <DCCReference Include="..\CheckIn\CheckInAppConfig.pas"/>
+        <DCCReference Include="..\CheckIn\CheckInAppLogic.pas"/>
+        <DCCReference Include="..\CheckIn\CheckInAudit.pas"/>
+        <DCCReference Include="..\CheckIn\CheckInMailer.pas"/>
+        <DCCReference Include="..\CheckIn\CheckInPageProducer.pas"/>
+        <DCCReference Include="..\CheckIn\CheckInServiceCoOrdinator.pas"/>
+        <DCCReference Include="..\Common\HTTPServerDispatcher\HTTPForwarder.pas"/>
+        <DCCReference Include="..\Common\HTTPServerDispatcher\HTTPMisc.pas"/>
+        <DCCReference Include="..\Common\HTTPServerDispatcher\HTTPServerDispatcher.pas"/>
+        <DCCReference Include="..\Common\HTTPServerDispatcher\HTTPServerPageProducer.pas"/>
+        <DCCReference Include="..\Common\StreamingSystem\SSAbstracts.pas"/>
+        <DCCReference Include="..\Common\StreamingSystem\SSIntermediates.pas"/>
+        <DCCReference Include="..\Common\StreamingSystem\SSStreamables.pas"/>
+        <DCCReference Include="..\Common\StreamingSystem\StreamingSystem.pas"/>
+        <DCCReference Include="..\Common\StreamingSystem\StreamSysBinary.pas"/>
+        <DCCReference Include="..\Common\StreamingSystem\StreamSysXML.pas"/>
+        <DCCReference Include="..\Common\StreamingSystem\TrivXML.PAS"/>
+        <DCCReference Include="..\Common\StreamingSystem\TrivXMLDefs.pas"/>
+        <DCCReference Include="..\Common\Tracking\Trackables.pas"/>
+        <DCCReference Include="..\Common\Balanced Tree\BinaryTree.pas"/>
+        <DCCReference Include="..\Common\Indexed Store\IndexedStore.pas"/>
+        <DCCReference Include="..\Common\DLList\DLList.pas"/>
+        <DCCReference Include="..\CoCoDM\Distributable\Frames\CocoBase.pas"/>
+        <DCCReference Include="..\Common\MemDB\MemDB.pas"/>
+        <DCCReference Include="..\Common\MemDB\MemDBApi.pas"/>
+        <DCCReference Include="..\Common\MemDB\MemDBBuffered.pas"/>
+        <DCCReference Include="..\Common\MemDB\MemDBIndexing.pas"/>
+        <DCCReference Include="..\Common\MemDB\MemDBJournal.pas"/>
+        <DCCReference Include="..\Common\MemDB\MemDBMisc.pas"/>
+        <DCCReference Include="..\Common\MemDB\MemDbStreamable.pas"/>
+        <DCCReference Include="..\Common\MemDB\MemDBUtils.pas"/>
+        <DCCReference Include="..\Common\WorkItems\CommonPool.pas"/>
+        <DCCReference Include="..\Common\WorkItems\DLThreadQueue.pas"/>
+        <DCCReference Include="..\Common\WorkItems\WorkItems.pas"/>
+        <DCCReference Include="..\Common\CachedStream\BufferedFileStream.pas"/>
+        <DCCReference Include="..\Common\Logging\GlobalLog.pas"/>
+        <DCCReference Include="..\Common\HTMLParser\HTMLEscapeHelper.pas"/>
+        <DCCReference Include="..\Common\QueuedMailer\QueuedMailer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -206,7 +224,7 @@
                     <VersionInfoKeys Name="CFBundleDevelopmentRegion"/>
                 </VersionInfoKeys>
                 <Source>
-                    <Source Name="MainSource">ServerApp.dpr</Source>
+                    <Source Name="MainSource">CheckInService.dpr</Source>
                 </Source>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k180.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
@@ -215,7 +233,6 @@
             </Delphi.Personality>
             <Deployment/>
             <Platforms>
-                <Platform value="OSX32">False</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">True</Platform>
             </Platforms>
