--- a/Sudoku/Sudoku1/Sudoku.dproj
+++ b/Sudoku/Sudoku1/Sudoku.dproj
@@ -122,19 +122,19 @@
             <FormType>fmx</FormType>
         </DCCReference>
         <DCCReference Include="SudokuBoard.pas"/>
-        <DCCReference Include="..\Common\StreamingSystem\SSAbstracts.pas"/>
-        <DCCReference Include="..\Common\StreamingSystem\SSIntermediates.pas"/>
-        <DCCReference Include="..\Common\StreamingSystem\SSStreamables.pas"/>
-        <DCCReference Include="..\Common\StreamingSystem\StreamingSystem.pas"/>
-        <DCCReference Include="..\Common\StreamingSystem\StreamSysBinary.pas"/>
-        <DCCReference Include="..\Common\StreamingSystem\StreamSysXML.pas"/>
-        <DCCReference Include="..\Common\StreamingSystem\TrivXML.PAS"/>
-        <DCCReference Include="..\Common\StreamingSystem\TrivXMLDefs.pas"/>
-        <DCCReference Include="..\Common\Tracking\Trackables.pas"/>
-        <DCCReference Include="..\Common\Balanced Tree\BinaryTree.pas"/>
-        <DCCReference Include="..\Common\Indexed Store\IndexedStore.pas"/>
-        <DCCReference Include="..\Common\DLList\DLList.pas"/>
-        <DCCReference Include="..\CoCoDM\Distributable\Frames\CocoBase.pas"/>
+        <DCCReference Include="..\..\Common\StreamingSystem\SSAbstracts.pas"/>
+        <DCCReference Include="..\..\Common\StreamingSystem\SSIntermediates.pas"/>
+        <DCCReference Include="..\..\Common\StreamingSystem\SSStreamables.pas"/>
+        <DCCReference Include="..\..\Common\StreamingSystem\StreamingSystem.pas"/>
+        <DCCReference Include="..\..\Common\StreamingSystem\StreamSysBinary.pas"/>
+        <DCCReference Include="..\..\Common\StreamingSystem\StreamSysXML.pas"/>
+        <DCCReference Include="..\..\Common\StreamingSystem\TrivXML.PAS"/>
+        <DCCReference Include="..\..\Common\StreamingSystem\TrivXMLDefs.pas"/>
+        <DCCReference Include="..\..\Common\Tracking\Trackables.pas"/>
+        <DCCReference Include="..\..\Common\Balanced Tree\BinaryTree.pas"/>
+        <DCCReference Include="..\..\Common\Indexed Store\IndexedStore.pas"/>
+        <DCCReference Include="..\..\Common\DLList\DLList.pas"/>
+        <DCCReference Include="..\..\CoCoDM\Distributable\Frames\CocoBase.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
