--- a/Sudoku/Symmetries/CellCount/Order2/Order2.dproj
+++ b/Sudoku/Symmetries/CellCount/Order2/Order2.dproj
@@ -94,6 +94,7 @@
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
+        <DCC_AssertionsAtRuntime>false</DCC_AssertionsAtRuntime>
         <DCC_MapFile>3</DCC_MapFile>
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
         <DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
